# bob-engine

./: Cargo.toml
assets/cfg/: asset_store.json
assets/proj/: projectiles_m.ase  ship_parts_s.aseprite  space_art.ase  space_parts_s.aseprite
macros/component_macro/: Cargo.toml
macros/component_macro/src/: lib.rs
macros/stable_cmpt_id/: Cargo.toml
macros/stable_cmpt_id/src/: lib.rs
src/: app.rs  main.rs  runtime.rs  test.rs
src/engine/: engine.rs  mod.rs  physics_systems.rs
src/engine/ecs/: dynamic_world.rs  system_bootstrap.rs  system_group.rs
src/engine/ecs/core_systems/: sprite_batch_allocator_system.rs  test_system.rs
src/engine/math/: float2.rs
src/engine/physics_systems/: manifold.rs  physics_system.rs  rigidbody.rs  shape.rs
src/engine/rendering/: renderer.rs
src/runtime/: assets.rs  ecs.rs  engine.rs  math.rs  phys.rs  rendering.rs  scene.rs
src/runtime/assets/: asset.rs  asset_embedded.rs  asset_handle.rs  asset_store.rs
src/runtime/ecs/: component_manifest.rs  component_store.rs  dynamic_world.rs  entities.rs  query.rs  system_base.rs  system_bootstrap.rs  system_group.rs  world_serializer.rs
src/runtime/math/: angle.rs  float2.rs
src/runtime/phys/: aabb.rs  collisions.rs  connector.rs  contact_manifold.rs  manifold.rs  physics_config.rs  physics_system.rs  rigidbody.rs  shape.rs
src/runtime/rendering/: camera.rs  instance.rs  renderer.rs  sprite_rendering.rs  tilemap_renderer.rs  tilemap_rendering.rs
src/runtime/scene/: scene_manager.rs  world_serializer.rs
src/test/: test_system.rs
(+13 files in other folders)
