[package]
name = "bob_engine"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = ["simd"]
simd = []


[dependencies]
paste = "1"
bytemuck = { version = "1", features = ["derive"] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seahash = "4.1.0"
# Use the latest version available (0.17+ as of early 2026)
# sdl3 = { version = "0.17", features = ["raw-window-handle"] }
# easy-sdl3-text = "0.4.1"
rust-embed = { version = "8", features = ["debug-embed"] }
wgpu = "29.0.0"
pollster = "0.4.0"
image = "0.25"
rand = "0.10.1"
